refactor(elasticsearch): 优化Elasticsearch客户端配置
- 移除未使用的Collectors导入
- 添加CredentialsProvider接口类型声明
- 使用List.toArray()替换stream收集方式
- 格式化用户名密码认证代码换行
- 添加elasticsearch-rest-client依赖声明